optimize plan for simulate

--- a/doc/8.list.rpc.md
+++ b/doc/8.list.rpc.md
@@ -1591,3 +1591,171 @@ contract UniV3Quoter {
 
 
 
+
+---------------------------
+
+=== CHAIN = eth ===
+=== METHOD = call ===
+
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 1m 06s
+     Running `target/debug/simulate --method call --chain eth`
+100000000000000000 WETH -> USDC 267979249
+80000000000000000 WETH -> USDC 214383438
+60000000000000000 WETH -> USDC 160787608
+40000000000000000 WETH -> USDC 107191758
+20000000000000000 WETH -> USDC 53595888
+Elapsed: 29.80s for 'chain_call'
+
+=== METHOD = revm ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.25s
+     Running `target/debug/simulate --method revm --chain eth`
+100000000000000000 WETH -> USDC 267979249
+Elapsed: 5.49s for 'revm_first'
+100000000000000000 WETH -> USDC 267979249
+80000000000000000 WETH -> USDC 214383438
+60000000000000000 WETH -> USDC 160787608
+40000000000000000 WETH -> USDC 107191758
+20000000000000000 WETH -> USDC 53595888
+Elapsed: 808.71ms for 'revm_loop'
+
+=== METHOD = anvil ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.25s
+     Running `target/debug/simulate --method anvil --chain eth`
+100000000000000000 WETH -> USDC 267979249
+Elapsed: 4.74s for 'anvil_first'
+100000000000000000 WETH -> USDC 267979249
+80000000000000000 WETH -> USDC 214383438
+60000000000000000 WETH -> USDC 160787608
+40000000000000000 WETH -> USDC 107191758
+20000000000000000 WETH -> USDC 53595888
+Elapsed: 295.91ms for 'anvil_loop'
+
+=== METHOD = revm_cached ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.24s
+     Running `target/debug/simulate --method revm_cached --chain eth`
+from=0x0000000000000000000000000000000000000001 token_in=0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2 token_out=0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48 quoter=0x61ffe014ba17989e743c5f6cb21bf9697530b21e pool=0x8ad599c3a0ff1de082011efddc58f1908eb6e6d8
+100000000000000000 WETH -> USDC 267979249
+Elapsed: 2.50s for 'revm_cached_first'
+100000000000000000 WETH -> USDC 267979249
+80000000000000000 WETH -> USDC 214383438
+60000000000000000 WETH -> USDC 160787608
+40000000000000000 WETH -> USDC 107191758
+20000000000000000 WETH -> USDC 53595888
+Elapsed: 750.84ms for 'revm_cached_loop'
+
+=== METHOD = revm_quoter ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.23s
+     Running `target/debug/simulate --method revm_quoter --chain eth`
+100000000000000000 WETH -> USDC 267979249
+Elapsed: 1.87s for 'chain_revm_quoter_first'
+100000000000000000 WETH -> USDC 267979249
+80000000000000000 WETH -> USDC 214383438
+60000000000000000 WETH -> USDC 160787608
+40000000000000000 WETH -> USDC 107191758
+20000000000000000 WETH -> USDC 53595888
+Elapsed: 220.86ms for 'chain_revm_quoter_loop'
+
+=== METHOD = validate ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.24s
+     Running `target/debug/simulate --method validate --chain eth`
+100000000000000000 WETH -> USDC | REVM: 267979249 | ETH_CALL: 267979249
+90000000000000000 WETH -> USDC | REVM: 241181346 | ETH_CALL: 241181346
+80000000000000000 WETH -> USDC | REVM: 214383438 | ETH_CALL: 214383438
+70000000000000000 WETH -> USDC | REVM: 187585525 | ETH_CALL: 187585525
+60000000000000000 WETH -> USDC | REVM: 160787608 | ETH_CALL: 160787608
+50000000000000000 WETH -> USDC | REVM: 133989685 | ETH_CALL: 133989685
+40000000000000000 WETH -> USDC | REVM: 107191758 | ETH_CALL: 107191758
+30000000000000000 WETH -> USDC | REVM: 80393826 | ETH_CALL: 80393826
+20000000000000000 WETH -> USDC | REVM: 53595888 | ETH_CALL: 53595888
+10000000000000000 WETH -> USDC | REVM: 26797946 | ETH_CALL: 26797946
+Elapsed: 122.00ns for 'chain_validate'
+
+=== CHAIN = avax ===
+=== METHOD = call ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.24s
+     Running `target/debug/simulate --method call --chain avax`
+100000000000000000 WAVAX -> USDC 2187642
+80000000000000000 WAVAX -> USDC 1750119
+60000000000000000 WAVAX -> USDC 1312593
+40000000000000000 WAVAX -> USDC 875065
+20000000000000000 WAVAX -> USDC 437534
+Elapsed: 29.39s for 'chain_call'
+
+=== METHOD = revm ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.26s
+     Running `target/debug/simulate --method revm --chain avax`
+100000000000000000 WAVAX -> USDC 2187642
+Elapsed: 5.01s for 'revm_first'
+100000000000000000 WAVAX -> USDC 2187642
+80000000000000000 WAVAX -> USDC 1750119
+60000000000000000 WAVAX -> USDC 1312593
+40000000000000000 WAVAX -> USDC 875065
+20000000000000000 WAVAX -> USDC 437534
+Elapsed: 770.53ms for 'revm_loop'
+
+=== METHOD = anvil ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.23s
+     Running `target/debug/simulate --method anvil --chain avax`
+100000000000000000 WAVAX -> USDC 2187642
+Elapsed: 4.93s for 'anvil_first'
+100000000000000000 WAVAX -> USDC 2187642
+80000000000000000 WAVAX -> USDC 1750119
+60000000000000000 WAVAX -> USDC 1312593
+40000000000000000 WAVAX -> USDC 875065
+20000000000000000 WAVAX -> USDC 437534
+Elapsed: 268.90ms for 'anvil_loop'
+
+=== METHOD = revm_cached ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.22s
+     Running `target/debug/simulate --method revm_cached --chain avax`
+from=0x0000000000000000000000000000000000000001 token_in=0xb31f66aa3c1e785363f0875a1b74e27b85fd66c7 token_out=0xb97ef9ef8734c71904d8002f8b6bc66dd9c48a6e quoter=0xbe0f5544ec67e9b3b2d979aaa43f18fd87e6257f pool=0x0e663593657b064e1bae76d28625df5d0ebd4421
+100000000000000000 WAVAX -> USDC 2187642
+Elapsed: 2.20s for 'revm_cached_first'
+100000000000000000 WAVAX -> USDC 2187642
+80000000000000000 WAVAX -> USDC 1750119
+60000000000000000 WAVAX -> USDC 1312593
+40000000000000000 WAVAX -> USDC 875065
+20000000000000000 WAVAX -> USDC 437534
+Elapsed: 718.34ms for 'revm_cached_loop'
+
+=== METHOD = revm_quoter ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.23s
+     Running `target/debug/simulate --method revm_quoter --chain avax`
+100000000000000000 WAVAX -> USDC 2187642
+Elapsed: 1.83s for 'chain_revm_quoter_first'
+100000000000000000 WAVAX -> USDC 2187642
+80000000000000000 WAVAX -> USDC 1750119
+60000000000000000 WAVAX -> USDC 1312593
+40000000000000000 WAVAX -> USDC 875065
+20000000000000000 WAVAX -> USDC 437534
+Elapsed: 237.33ms for 'chain_revm_quoter_loop'
+
+=== METHOD = validate ===
+warning: unused manifest key: bin.0.clap
+    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.29s
+     Running `target/debug/simulate --method validate --chain avax`
+100000000000000000 WAVAX -> USDC | REVM: 2187642 | ETH_CALL: 2187642
+90000000000000000 WAVAX -> USDC | REVM: 1968881 | ETH_CALL: 1968881
+80000000000000000 WAVAX -> USDC | REVM: 1750119 | ETH_CALL: 1750119
+70000000000000000 WAVAX -> USDC | REVM: 1531357 | ETH_CALL: 1531357
+60000000000000000 WAVAX -> USDC | REVM: 1312593 | ETH_CALL: 1312593
+50000000000000000 WAVAX -> USDC | REVM: 1093830 | ETH_CALL: 1093830
+40000000000000000 WAVAX -> USDC | REVM: 875065 | ETH_CALL: 875065
+30000000000000000 WAVAX -> USDC | REVM: 656300 | ETH_CALL: 656300
+20000000000000000 WAVAX -> USDC | REVM: 437534 | ETH_CALL: 437534
+10000000000000000 WAVAX -> USDC | REVM: 218767 | ETH_CALL: 218767
+Elapsed: 70.00ns for 'chain_validate'
+
+--------------------------
+
+logic code này chạy cơ bản cũng được rồi 
